--- a/Dissertation/Work_structured/Dissertation/introduction.tex
+++ b/Dissertation/Work_structured/Dissertation/introduction.tex
@@ -65,7 +65,7 @@
 
 Качественно новая методика к построению математических моделей управляющих систем массового обслуживания была предложена М.А.~Федоткиным в работах \cite{Fedotkin:1996, fedotkin:1998} и существенно доработана А.В.~Зориным в работах \cite{Zorin:2008:1, Zorin:2014, ZorineDissertation} и \cite{Zorin:2017}. Методика основана на понятии абстрактной управляющей системы, введеном А.А.~Ляпуновым и С.В.~Яблонским в работе \cite{Lyapunov}, и также носит название кибернетического подхода. Основными принципами подхода являются: 1) наблюдение за системой происходит в дискретные моменты времени; 2) управляющая система разделяется на логические блоки, между которыми определяются функциональные и стохастические связи при их взаимодействии во времени; 3) описание блоков системы должно быть нелокальным. В качестве блоков управляющей системы выделяют следующие: входные полюса, внешняя память, блок по переработке внешней памяти, внутренняя память, блок по переработке внутренней памяти, выходные полюса и внешняя среда. Некоторые из перечисленных блоков могут быть опущены при исследовании вследствие их вырожденности. Так, например, в работе \cite{Novgorod:2011} случайная среда имеет всего одно состояние, а в работе \cite{Zorin:2008:1}~--- несколько, поэтому блок со случайной средой во второй работе учитывается, а в первой~--- нет. Рассмотрение систем с позиции абстрактных управляющих систем Ляпунова--Яблонского позволяет исследовать их с единой позиции: разделяя системы на составные блоки, описывая каждый из них и вводя функционально-статистические связи между ними. Это существенно упрощает анализ уже известных систем, а также делает возможным исследование новых и более сложных. Кроме того, стало более естественным независимое рассмотрение подсистем  и изучение их свойств отдельно от основной модели. Так, в работах \cite{FedotkinRachinskaya, Fedotkin:2012} исследуется процесс формирования автомобильных <<пачек>> на дорогах как независимая система массового обслуживания. А в работах \cite{Proidakova:2008,Fedotkin:2009} изучались выходящие потоки систем массового обслуживания с циклическим алгоритмом управления входными пуассоновскими потоками и потоками Гнеденко--Коваленко. 
 
-Аппарат абстрактных управляющих систем Ляпунова--Яблонского был удачно применен к анализу неклассических конфликтных управляющих систем массового обслуживания А.В.~Зориным в работах \cite{Zorin:2003,Zorin:2006,Zorin:2008:2,Zorin:2009:1,Zorin:2009:2,Zorin:2010:1,Zorin:2010:2,Zorin:2011:1,Zorin:2011:2,Zorin:2013 ,Zorin:2014:1,Zorin:2014:2,Zorin:2012:1, Zorin:2014:3}. В частности, была построена математическая модель для системы управления неординарными конфликтными потоками, формируемыми во внешней среде, в классе алгоритмов с переналадками и разделением времени, а также циклических алгоритмов с продлением. Была построена модель для системы управления неординарными рекуррентными потоками в классе циклических алгоритмов при наличии переналадок. Кроме того, отметим, что исследовать систему последовательных перекрестков с различными усложнениями стало возможным только с точки зрения абстрактных управляющих систем Ляпунова--Яблонского. Так, модель тандема перекрестков с немгновенным перемещением машин между ними была впервые предложена в работах~\cite{Zorin:2010:3, Zorin:2011:2, Zorin:2012:2}. В рассматриваемых там моделях динамика перемещения машин от одного перекрестка к другому задается бернулиевской случайной величиной: каждая машина с некоторой фиксированной вероятностью $0<p<1$ успевает доехать до следующего перекрестка и с противоположной вероятностью $1-p$ остается <<между>> ними. В работах автора \cite{ORM2018, DCCN2017, Tomsk2017, Penza2017, DCCN2016:1, DCCN2016:2, DCCN2015, Dm2015, Minsk2015, vestnikTvGU, vestnikVGAVT2, UBS} с точки зрения управляющей системы Ляпунова--Яблонского построена и исследована математическая модель тандема перекрестков с немгновенным перемещением автомобилей и циклическим алгоритмом управления светофором с продлением. Поскольку многие реальные системы могут быть представлены в виде конфликтной управляющей системы Ляпунова--Яблонского, то исследования в данной области являются актуальными.
+Аппарат абстрактных управляющих систем Ляпунова--Яблонского был удачно применен к анализу неклассических конфликтных управляющих систем массового обслуживания А.В.~Зориным в работах \cite{Zorin:2003,Zorin:2006,Zorin:2008:2,Zorin:2009:1,Zorin:2009:2,Zorin:2010:1,Zorin:2010:2,Zorin:2011:1,Zorin:2011:2,Zorin:2013 ,Zorin:2014:1,Zorin:2014:2,Zorin:2012:1, Zorin:2014:3}. В частности, была построена математическая модель для системы управления неординарными конфликтными потоками, формируемыми во внешней среде, в классе алгоритмов с переналадками и разделением времени, а также циклических алгоритмов с продлением. Была построена модель для системы управления неординарными рекуррентными потоками в классе циклических алгоритмов при наличии переналадок. Кроме того, отметим, что исследовать систему последовательных перекрестков с различными усложнениями стало возможным только с точки зрения абстрактных управляющих систем Ляпунова--Яблонского. Так, модель тандема перекрестков с немгновенным перемещением машин между ними была впервые предложена в работах~\cite{Zorin:2010:3, Zorin:2011:2, Zorin:2012:2}. В рассматриваемых там моделях динамика перемещения машин от одного перекрестка к другому задается бернулиевской случайной величиной: каждая машина с некоторой фиксированной вероятностью $0<p<1$ успевает доехать до следующего перекрестка и с противоположной вероятностью $1-p$ остается <<между>> ними. В работах автора \cite{ Minsk2015, Dm2015, Penza2017, ORM2018, Tomsk2017, ITMM2019, DCCN2015, DCCN2016:1, DCCN2016:2, DCCN2016:3,  DCCN2017, vestnikTvGU, vestnikVGAVT2, UBS} с точки зрения управляющей системы Ляпунова--Яблонского построена и исследована математическая модель тандема перекрестков с немгновенным перемещением автомобилей и циклическим алгоритмом управления светофором с продлением. Поскольку многие реальные системы могут быть представлены в виде конфликтной управляющей системы Ляпунова--Яблонского, то исследования в данной области являются актуальными.
 
 Аппарат абстрактных управляющих систем также облегчает асимптотический анализ поведения систем обслуживания. К более ранним работам, в которых исследовалось предельное поведение операционных характеристик (число требований в системе, время ожидания и т.п.) классическими методами, можно отнести работы \cite{Davis:1995, Borovrkov:1964, Borovrkov:1980, Afanasieva:2011,Afanasieva:2008, Whitt:1971, Whitt:1982}. Также представляют большой интерес работы, в которых определяются условия существования стационарного распределения, например, \cite{Loynes:1962, Davis:1972, Whitt:2014, Choudhury:1995}. Основными известными методами здесь принято считать прямое решение уравнений стационарности, применение теоремы эргодичности Мустафы, применение критерия Найквиста-Михайлова. Отличительными особенностями этих методов является отсутствие универсальной последовательности действий при применении их к разным типам исследуемых систем. Существенно новым методом в этом вопросе является итеративно-мажорантный метод, впервые примененный М.А.~Федоткиным в контексте абстрактных управляющих систем обслуживания (см.~\cite{Fedotkin:1988, Fedotkin:1989}). Отличительными особенностями метода являются относительно легкая проверяемость получаемых условий и алгоритмизованность. Данная методология была успешно применена в задаче исследования перекрестка с приоритетными потоками \cite{Proidakova:2007}, в задаче изучения системы со случайной внешней средой \cite{Zorin:2008:1}, в задаче адаптивного управления потоками \cite{LitvakDissertation} и др. Более глубоко метод был доработан в диссертации А.В.~Зорина \cite{ZorineDissertation}. 
 
