--- a/Dissertation/Work_structured/biblio/authorconferences.bib
+++ b/Dissertation/Work_structured/biblio/authorconferences.bib
@@ -1,11 +1,3 @@
-% 
-
-
-
-
-
-
-
 @inproceedings{Minsk2015,
   author = {Кочеганов, В.М. and Зорин, А.В.},
   title = {Вероятностная модель тандема систем массового обслуживания с циклическим управлением с продлением},
@@ -16,7 +8,6 @@
   pages = {94--99},
   language = {russian},
 }
-
 
 @inproceedings{Dm2015,
   author = {Кочеганов, В.М. and Зорин, А.В.},
@@ -30,11 +21,11 @@
 }
 
 
-
+% Этой статьи почему-то нет в РИНЦ !!!!
 @inproceedings{DCCN2015,
   author = {Kocheganov, V.M. and Zorine, A.V.},
   title = {Low-priority queue Fluctuations in Tandem of Queuing Systems Under Cyclic Control with Prolongations },
-  booktitle = {\textit{<<Distributed computer and communication networks: control, computation, communications>> (DCCN-2016) : материалы Восемнадцатой междунар. Научн. Конфер, 19-22 окт. 2015 г., Москва: / Ин-т проблем упр. им. В.А. Трапезникова Рос. Акад. Наук}},
+  booktitle = {\textit{Распределенные компьютерные и телекоммуникационные сети: управление, вычисление, связь  (DCCN-2015). Материалы Восемнадцатой международной научной конференции}},
   publisher = {ИПУ РАН},
   address  = {М.},
   year = {2015},
@@ -43,32 +34,23 @@
 }
 
 
-@inproceedings{DCCN2016:1,
+
+% Этой статьи почему-то нет в РИНЦ !!!!
+@inproceedings{DCCN2016:3,
   author = {Kocheganov, V.M. and Zorine, A.V.},
-  title = {Low-priority queue Fluctuations in Tandem of Queuing Systems Under Cyclic Control with Prolongations },
-  booktitle = {\textit{Proceedings of International Workshop <<Distributed computer and communication networks>> (DCCN-2016)}},
-  volume = {601},
+  title = {Low-priority queue and server's steady-state existence in a tandem under prolongable cyclic service },
+  booktitle = {\textit{	Распределенные компьютерные и телекоммуникационные сети: управление, вычисление, связь (DCCN-2016). Материалы Девятнадцатой международной научной конференции: в 3 томах, под общей редакцией В. М. Вишневского и К. Е. Самуйлова}},
+  publisher = {РУДН},
+  address  = {М.},
   year = {2016},
-  pages = {268--279},
-  language = {english},
+  pages = {232--239},
+  language = {russian},
 }
-
-
-@inproceedings{DCCN2016:2,
-  author = {Kocheganov, V.M. and Zorine, A.V.},
-  title = {Low-priority queue and server's steady-state existence in a tandem under prolongable cyclic service  },
-  booktitle = {\textit{Distributed Computer and Communication Networks. DCCN~2016. Ser. Communications in Computer and Information Science}},
-  volume = {678},
-  year = {2016},
-  pages = {210--221},
-  language = {english},
-}
-
 
 @inproceedings{Penza2017,
   author = {Кочеганов, В.М. and Зорин, А.В.},
   title = { Изучение процесса управления потоками первичных требований в тандеме систем обслуживания с циклическим алгоритмом с продлением},
-  booktitle = {\textit{Проблемы теоретической кибернетики: XVIII международная конференция (Пенза, 19-23 июня 2017г.): Материалы: Под редакцией Ю.И. Журавлева}},
+  booktitle = {\textit{Проблемы теоретической кибернетики: XVIII международная конференция (Пенза, 19-23 июня 2017г.). Материалы: Под редакцией Ю.И. Журавлева}},
   publisher = {МАКС Пресс},
   address  = {М.},
   year = {2017},
@@ -80,25 +62,24 @@
 @inproceedings{Tomsk2017,
   author = {Кочеганов, В.М. and Зорин, А.В.},
   title = {Анализ потоков первичных требований в тандеме при циклическом управлении с продлением},
-  booktitle = {\textit{Информационные технологии и математическое моделирование (ИТММ-2017): Материалы XVI Международной конференции имени А.Ф. Терпугова (29 сентября - 3 октября 2017 г.)}},
+  booktitle = {\textit{Информационные технологии и математическое моделирование (ИТММ-2017). Материалы XVI Международной конференции имени А.Ф. Терпугова (29 сентября - 3 октября 2017 г.)}},
   publisher = {Изд-во НТЛ},
   address  = {Томск},
   year = {2017},
-  part = {1},
+  volume = {1},
   pages = {81--87},
   language = {russian},
 }
 
-
 @inproceedings{DCCN2017,
   author = {Kocheganov, V.M. and Zorine, A.V.},
   title = {Primary input flows in a tandem under prolongable cyclic service},
-  booktitle = {\textit{Distibuted computer and communication networks: control, computation, communications (DCCN-2017): материалы Двадцатой междунар. науч. конфер., 25-29 сент. 2017 г., Москва: / Ин-т проблем упр. им. В.А. Трапезникова Рос. акад. наук; под общ. ред. В.М. Вишневского}},
+  booktitle = {\textit{	Распределенные компьютерные и телекоммуникационные сети: управление, вычисление, связь (DCCN-2017). Материалы Двадцатой международной научной конференции, под общ. ред. В.М. Вишневского}},
   publisher = {ТЕХНОСФЕРА},
   address  = {М.},
   year = {2017},
   pages = {517--525},
-  language = {russian},
+  language = {english},
 }
 
 @inproceedings{ORM2018,
@@ -110,3 +91,18 @@
   pages = {337--342},
   language = {english},
 }
+
+@inproceedings{ITMM2019,
+  author = {Кочеганов, В.М.},
+  title = {Классификация состояний марковской цепи
+в модели тандема с циклическим управлением
+с продлением},
+  booktitle = {\textit{Информационные технологии и математическое моделирование (ИТММ-2019). Материалы XVIII Международной конференции имени А.Ф. Терпугова (26 июня -- 30 июня 2019 г.)}},
+  publisher = {Изд-во НТЛ},
+  address  = {Томск},
+  year = {2019},
+  part = {2},
+  pages = {195--200},
+  language = {russian},
+}
+
