--- a/Dissertation/Work_structured/biblio/authorpapers.bib
+++ b/Dissertation/Work_structured/biblio/authorpapers.bib
@@ -1,2 +1,33 @@
 
+@inproceedings{DCCN2016:1,
+  author = {Kocheganov, V.M. and Zorine, A.V.},
+  title = {Low-priority queue fluctuations in tandem of queuing systems under cyclic control with prolongations },
+  booktitle = {\textit{Communications in Computer and Information Science}},
+  volume = {601},
+  year = {2016},
+  pages = {268--279},
+  language = {english},
+}
+
+@inproceedings{DCCN2016:2,
+  author = {Kocheganov, V.M. and Zorine, A.V.},
+  title = {Low-priority queue and server's steady-state existence in a tandem under prolongable cyclic service  },
+  booktitle = {\textit{Communications in Computer and Information Science}},
+  volume = {678},
+  year = {2016},
+  pages = {210--221},
+  language = {english},
+}
+
+
+@Book{RID,
+  title                    = {Статистический анализ тандема перекрестков с циклическим алгоритмом и алгоритмом с продлением: А. с. №~2019612786, дата государственной регистрации в Реестре программ для ЭВМ 27 февраля 2019 г.},
+  author                   = {Кочеганов, В.М.},
+  year                     = {2019},
+  language                 = {russian}
+}
+
+
+
+
 
